[workspace]
resolver = "3"
members = ["./r-egl", "r-egl-wayland"]

[workspace.dependencies]
gl = "^0.14"
wayland-client = "^0.31"
wayland-protocols = "^0.32"
wayland-egl = "^0.32"
r-egl = { path = "./r-egl", version = "0.2.2" }
wayland-backend = "^0.3"

[workspace.package]
version = "0.2.2"
authors = [
	"Timothée Haudebourg <author@haudebourg.net>",
	"Sean Kerr <sean@metatomic.io>",
	"Decodertalkers <aakari@tutanota>",
]
license = "MIT/Apache-2.0"
edition = "2024"
repository = "https://github.com/waycrate/egl_wayland_utils"
